--- a/client/pom.xml
+++ b/client/pom.xml
@@ -77,17 +77,11 @@
             <artifactId>jms-module</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-        <dependency>
-            <groupId>com.immobilier</groupId>
-            <artifactId>corba-server</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <scope>compile</scope>
-        </dependency>
+        <!-- ✅ PAS DE DUPLICATION ICI! -->
     </dependencies>
 
     <build>
         <plugins>
-            <!-- Compiler plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -99,7 +93,6 @@
                 </configuration>
             </plugin>
 
-            <!-- Exec plugin pour lancer l'application -->
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
