--- a/corba-server/pom.xml
+++ b/corba-server/pom.xml
@@ -159,6 +159,14 @@
                     <mainClass>com.immobilier.corba.CorbaServer</mainClass>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.1.0</version>
+                <configuration>
+                    <mainClass>com.immobilier.corba.CorbaServer</mainClass>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
