--- a/client/pom.xml
+++ b/client/pom.xml
@@ -29,18 +29,19 @@
             <version>4.11.1</version>
         </dependency>
 
-        <!-- CORBA generated classes - UNE SEULE FOIS! -->
+        <!-- ✅ FIX: Classes CORBA générées -->
         <dependency>
             <groupId>com.immobilier</groupId>
             <artifactId>corba-server</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
-        <!-- REST server -->
+        <!-- ✅ FIX: Classes REST (WAR -> classes) -->
         <dependency>
             <groupId>com.immobilier</groupId>
             <artifactId>rest-server</artifactId>
             <version>1.0-SNAPSHOT</version>
+            <classifier>classes</classifier> <!-- ✅ Ajout -->
         </dependency>
 
         <!-- SOAP client -->
@@ -64,7 +65,7 @@
             <version>2.10.1</version>
         </dependency>
 
-        <!-- HTTP client (REST) -->
+        <!-- HTTP client -->
         <dependency>
             <groupId>org.apache.httpcomponents.client5</groupId>
             <artifactId>httpclient5-fluent</artifactId>
@@ -77,7 +78,6 @@
             <artifactId>jms-module</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-        <!-- ✅ PAS DE DUPLICATION ICI! -->
     </dependencies>
 
     <build>
